# Sui

./: .gitignore  README.md  build.gradle  gradle.properties  module.gradle  settings.gradle
.github/workflows/: module.yml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/rikka/sui/demo/: MainActivity.kt  Sui.java
demo/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
hidden-api-21/: build.gradle
hidden-api-21/src/main/: AndroidManifest.xml
hidden-api-common/: build.gradle
hidden-api-common-bridge/src/main/java/hidden/: HiddenApiBridge.java
hidden-api-common/src/main/java/$android/app/: AppOpsManager.java
hidden-api-common/src/main/java/$android/content/: Context.java
hidden-api-common/src/main/java/$android/content/pm/: PackageInfo.java  PackageManager.java
hidden-api-common/src/main/java/$android/os/: UserHandle.java
hidden-api-common/src/main/java/android/app/: ActivityThread.java  ContextImpl.java  IActivityManager.java
hidden-api-common/src/main/java/android/content/pm/: IOnAppsChangedListener.java  IPackageManager.java  PackageManager.java
hidden-api-common/src/main/java/android/os/: ServiceManager.java
module/: build.gradle  proguard-rules.pro
module/src/main/: AndroidManifest.xml
module/src/main/aidl/moe/shizuku/server/: IShizukuService.aidl
module/src/main/cpp/: CMakeLists.txt  android.cpp  android.h  binder_hook.cpp  binder_hook.h  bridge_service.cpp  bridge_service.h  config.h  dex_file.cpp  dex_file.h  logging.h  main.cpp  manager_process.cpp  manager_process.h  misc.cpp  misc.h  rirud.cpp  rirud.h  settings_process.cpp  settings_process.h  socket.cpp  socket.h  starter.cpp  system_server.cpp  system_server.h  tinynew.cpp
module/src/main/cpp/adbd/: adbd_preload.cpp  adbd_wrapper_main.cpp
module/src/main/cpp/core/: binder_hook.cpp  bridge_service.cpp  main.cpp  main.h  main_riru.cpp  main_zygisk.cpp  manager_process.cpp  manager_process.h  settings_process.cpp  settings_process.h  system_server.cpp  system_server.h
module/src/main/cpp/include/: config.h  zygisk.hpp
module/src/main/cpp/main/: adb_root.hpp  main.cpp  sui_main.hpp  uninstall_main.hpp
module/src/main/cpp/starter/: starter_main.cpp
module/src/main/cpp/util/: android.cpp  app_process.cpp  dex_file.cpp  memory.cpp  misc.cpp  plt.c  selinux.cpp  socket.cpp
module/src/main/cpp/util/include/: android.h  app_process.h  dex_file.h  memory.h  misc.h  plt.h  selinux.h  socket.h
module/src/main/java/rikka/sui/binder/: HookedBinderProxy.java  IBinderWrapper.java  Transaction.java  TransactionCodeExporter.java
module/src/main/java/rikka/sui/cmd/: SuiCmd.java
module/src/main/java/rikka/sui/installer/: Installer.java  Uninstaller.java
module/src/main/java/rikka/sui/ktx/: Drawable.kt  Handler.kt  IContentProvider.kt  Resources.kt  TextView.kt  Window.kt
module/src/main/java/rikka/sui/manager/: BridgeServiceClient.java  ManagerConstants.java  ManagerProcess.java  PermissionConfirmation.java  PermissionConfirmationLayout.kt  Strings.java  VectorDrawableCreator.java  WorkerHandler.java
module/src/main/java/rikka/sui/model/: AppInfo.java
module/src/main/java/rikka/sui/resource/: Res.java  Strings.java  SuiApk.java  TextUtilsCompat.java  Utils.java  Xml.java
module/src/main/java/rikka/sui/server/: ClientManager.java  ClientRecord.java  ServerConstants.java  Service.java  ShizukuApiConstants.java  Starter.java  SuiClientManager.java  SuiConfig.java  SuiConfigManager.java  SuiDatabase.java  SuiDatabase.kt  SuiService.java  SuiUserServiceManager.java
module/src/main/java/rikka/sui/settings/: ActivityThreadUtil.java  HandlerUtil.java  SettingsConstants.java  SettingsInstrumentation.java  SettingsProcess.java  WorkerHandler.java
module/src/main/java/rikka/sui/shell/: Shell.java
module/src/main/java/rikka/sui/shortcut/: ShortcutConstants.java  SuiShortcut.java
module/src/main/java/rikka/sui/systemserver/: Bridge.java  BridgeService.java  PackageReceiver.java  SystemProcess.java  SystemServerConstants.java
module/src/main/java/rikka/sui/util/: AppNameComparator.java  BridgeServiceClient.java  BuildUtils.java  InstrumentationUtil.java  Logger.java  MapUtil.java  OsUtils.java  ParcelFileDescriptorUtil.java  ParcelUtils.java  ParceledListSlice.java  SQLiteDataBaseRemoteCompat.java  Unsafe.java  UserHandleCompat.java
module/src/main/res/drawable/: ic_close_24.xml  ic_shortcut_24.xml  ic_su_24.xml
module/src/main/res/layout/: configmation_dialog.xml  confirmation_dialog.xml  management_app_item.xml  management_dialog.xml
module/src/main/res/values/: colors.xml
shared/: build.gradle
shared/src/main/: AndroidManifest.xml
shared/src/main/aidl/moe/shizuku/server/: IShizukuApplication.aidl  IShizukuClient.aidl  IShizukuManager.aidl  IShizukuService.aidl
template/magisk_module/: .gitattributes  CHANGELOG.md  README.md  customize.sh  module.prop  post-fs-data.sh  post-install.example.sh  riru.sh  rish  sepolicy.rule  sui_cmd  sui_wrapper  uninstall.sh  util_functions.sh
ui/: aapt2-resources.cfg  build.gradle  proguard-rules.pro
ui/src/main/: AndroidManifest.xml
ui/src/main/java/rikka/sui/: SuiActivity.java  SuiRequestPermissionDialog.java
ui/src/main/java/rikka/sui/app/: AppActivity.java  AppFragment.java  InjectedActivity.java
ui/src/main/java/rikka/sui/ktx/: LayoutInflater.kt  TextView.kt
ui/src/main/java/rikka/sui/management/: ManagementAdapter.kt  ManagementAppItemViewHolder.kt  ManagementFragment.kt  (+1 more)
ui/src/main/res/anim/: stagger_layout_animation.xml
ui/src/main/res/color/: confirmation_dialog_button_text.xml
ui/src/main/res/drawable/: confirmation_dialog_background.xml  ic_su_24.xml
ui/src/main/res/layout/: confirmation_dialog.xml  main.xml  management.xml  management_app_item.xml
ui/src/main/res/raw/: keep.xml
ui/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
ui/src/main/res/values-night/: styles.xml
ui/src/main/res/values-v31/: colors.xml
ui/src/main/res/values-zh-rCN/: strings.xml
ui/src/main/res/values-zh-rTW/: strings.xml
(+88 files in other folders)
